syntax = "proto3";

import "../../../proto/core.proto";

message TransferInput {
  // The receiver of the token.
  Address to = 1;
  // The token symbol to transfer.
  string symbol = 2;
  // The amount to to transfer.
  int64 amount = 3;
  // The memo.
  string memo = 4;
}
